Change History
==============

1.7.13 (unreleased)
-------------------

- Correct maxtextlength to avoid double counting of newlines. Thanks, mjfinney.
  [smcmahon]

- Import folder for fieldsets from ATContentTypes rather than plone.app.folder
  for LinguaPlone compatability. Thanks, Tom Gross.
  [smcmahon]

- Depend on Products.CMFPlone instead of Plone.
  [maurits]


1.7.12 (2013-06-20)
-------------------

- Fix exception in mailer if no recipient set. Thanks, dpc22.
  [smcmahon]

- Don't fix position quickedit toolbox unless window is tall enough to display.
  [smcmahon]

- Don't fail on install if the kupu tool doesn't have getPortalTypesForResourceType.
  [smcmahon]

- Delete confirmation cleanup wasn't working; fixed.
  [smcmahon]

- Edit/delete icons missing in quickeditor in 4.3. Fixed.
  [smcmahon]

- QuickEdit toolbox covered by footer in sunburst 4.3. Fixed.
  [smcmahon]

1.7.11 (2013-05-29)
-------------------

- Packaging fixes.

1.7.10 (brown bag)
-------------------

- Packaging fixes.


1.7.9 (2013-05-29)
------------------

- Remove doc string for @@gpg_services/encrypt. (Thanks, The Code Distillery)
  [smcmahon]

- Clean up Popen handling in encryption, add some logging. (Thanks, The Code Distillery)
  [smcmahon]

- Remove undesirable doc strings from custom script adapter methods. Add
  private declarations.
  (Thanks, The Code Distillery)
  [smcmahon]

- Remove undesirable doc strings, set private on mail adapter's setBody_pt.
  (Thanks, The Code Distillery)
  [smcmahon]

- remove undesirable doc string from fgGetSuccessAction.
  (Thanks, The Code Distillery)
  [smcmahon]

- Add traversal hacks to block TTW reads of several text, template, tales and python
  attributes.
  (Thanks, The Code Distillery)
  [smcmahon]

- remove undesirable doc string from onSuccess.
  (Thanks, The Code Distillery)
  [smcmahon]

- Protect "member*" convenience methods from traversal TTW.
  (Thanks, The Code Distillery)
  [smcmahon]
